src/test/resources/test_samples/semantic_errors/nested_function.sn
// Тест для проверки запрета вложенных функций
fn outer_func() {
    let x: i32 = 10;

    fn inner_func() { // Это объявление должно вызывать ошибку
        let y: i32 = 20;
        // Какое-то действие, чтобы функция не считалась неиспользуемой, если проверка дойдет до этого
    }

    // Попытка вызова, если объявление прошло (не должно)
    // inner_func();
}

fn main() {
    outer_func();
}
